<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CombosActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/rg_opcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp">

            <RadioButton
                android:id="@+id/rb_opcion_uno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/opcion_uno"/>

            <RadioButton
                android:id="@+id/rb_opcion_dos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/opcion_dos"/>

            <RadioButton
                android:id="@+id/rb_opcion_tres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/opcion_tres"/>



            <RadioButton
                android:id="@+id/rb_opcion_cuatro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/opcion_cuatro"/>
        </RadioGroup>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/chk_terminos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:checkedState="indeterminate"
            android:text="@string/aceptar_terminos"/>


        <Button
            android:id="@+id/btn_imprimir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imprimir"/>

        <TextView
            android:id="@+id/lbl_resultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </LinearLayout>



</ScrollView>