<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".TextosActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_nombre_fill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_person"
        android:hint="@string/nombre"
        app:endIconMode="clear_text"
        style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_dia_fill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/dias"
        app:startIconDrawable="@drawable/ic_calendar"
        style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            app:simpleItems="@array/dias"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_clave_fill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_lock"
        android:layout_marginTop="10dp"
        android:hint="@string/clave"
        app:endIconMode="password_toggle"
        style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_imprimir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/imprimir"/>

    <Button
        android:id="@+id/btn_mostrar_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error"/>

    <Button
        android:id="@+id/btn_limpiar_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/limpiar_error"/>

    <TextView
        android:id="@+id/lbl_resultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>